[tool.poetry]
name = "py-pong"
version = "0.1.0"
description = ""
authors = ["Syntrice <syntrice@protonmail.com>"]
readme = "README.md"
packages = [{include = "py_pong"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "2.1.3.dev8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
